--- a/pom.xml
+++ b/pom.xml
@@ -43,12 +43,12 @@
 			<version>2.1.3.RELEASE</version>
 		</dependency>
 
-<!--		<dependency>-->
-<!--		<groupId>org.junit.jupiter</groupId>-->
-<!--		<artifactId>junit-jupiter</artifactId>-->
-<!--		<version>RELEASE</version>-->
-<!--		<scope>test</scope>-->
-<!--		</dependency>-->
+		<dependency>
+		<groupId>org.junit.jupiter</groupId>
+		<artifactId>junit-jupiter</artifactId>
+		<version>RELEASE</version>
+		<scope>test</scope>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
