--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -34,5 +34,7 @@ spring.rabbitmq.dynamic=true
 
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-#
+
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+
+logging.file=posts-api.log
